--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 </head>
 
 <body>
-
+    <nav></nav>
+    <header style="background-color:blue; height: 100vh;"></header>
+    <section style="background-color:aquamarine; height: 150px;"></section>
+    <section style="background-color:blueviolet; height: 150px;"></section>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, optio! Fuga, optio? Animi, in nisi exercitationem natus fugit
+        veniam, porro quo sequi deleniti deserunt blanditiis iure laboriosam, rerum voluptatem a?
+    </div>
+    <section style="background-color:red; height: 150px;"></section>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor temporibus laboriosam a error. Facere dolores, totam, iste
+        unde corporis labore enim ipsum dolore harum, numquam consequatur beatae ut et nihil.
+    </div>
+    <section style="background-color:black; height: 150px;"></section>
 </body>
 
 </html>
