add fonts to css

--- a/index.html
+++ b/index.html
@@ -5,24 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>DC | Full-Stack web develloper</title>
+
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
     <nav></nav>
     <header style="background-color:blue; height: 100vh;"></header>
-    <section style="background-color:aquamarine; height: 150px;"></section>
-    <section style="background-color:blueviolet; height: 150px;"></section>
-    <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, optio! Fuga, optio? Animi, in nisi exercitationem natus fugit
-        veniam, porro quo sequi deleniti deserunt blanditiis iure laboriosam, rerum voluptatem a?
-    </div>
-    <section style="background-color:red; height: 150px;"></section>
-    <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor temporibus laboriosam a error. Facere dolores, totam, iste
-        unde corporis labore enim ipsum dolore harum, numquam consequatur beatae ut et nihil.
-    </div>
-    <section style="background-color:black; height: 150px;"></section>
+    <main>
+        <section style="background-color:aquamarine; height: 150px;"></section>
+        <section style="background-color:blueviolet; height: 150px;"></section>
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, optio! Fuga, optio? Animi, in nisi exercitationem natus fugit
+            veniam, porro quo sequi deleniti deserunt blanditiis iure laboriosam, rerum voluptatem a?
+        </div>
+        <section style="background-color:red; height: 150px;"></section>
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor temporibus laboriosam a error. Facere dolores, totam, iste
+            unde corporis labore enim ipsum dolore harum, numquam consequatur beatae ut et nihil.
+        </div>
+        <section style="background-color:black; height: 150px;"></section>
+    </main>
+
+    <footer>Copyright &copy; Daniel Castillo</footer>
 </body>
 
 </html>
