add fontawesome and full header design

--- a/index.html
+++ b/index.html
@@ -8,12 +8,25 @@
     <title>DC | Full-Stack web develloper</title>
 
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./dist/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
     <nav></nav>
-    <header style="background-color:blue; height: 100vh;"></header>
+    <header style="background-color:blue; height: 100vh;">
+        <div style="background-color:antiquewhite; height: 100vh; width: 25%; opacity: 0.5; display: flex; align-items: center;">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, ipsum perferendis quos quibusdam expedita blanditiis
+                saepe repellat perspiciatis, sunt, enim adipisci? Illo sunt assumenda accusantium voluptatum quas sit officia
+                eos.
+            </p>
+        </div>
+        <div style="width: 100%; margin-top: -11vh; font-size: 4em; display: flex; justify-content: center;">
+            <a href="#" style="color:antiquewhite">
+                <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
+            </a>
+
+        </div>
+    </header>
     <main>
         <section style="background-color:aquamarine; height: 150px;"></section>
         <section style="background-color:blueviolet; height: 150px;"></section>
