add desing for about section

--- a/index.html
+++ b/index.html
@@ -27,8 +27,32 @@
 
         </div>
     </header>
-    <main>
-        <section style="background-color:aquamarine; height: 150px;"></section>
+    <main class="container">
+        <section style="background-color:aquamarine; height: 150px;">
+            <div class="clearfix">
+                <div style="float: left; max-width: 50%;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis pariatur possimus sapiente dicta laudantium aliquid et
+                    odio ad, voluptatum porro magni veritatis in perferendis nulla. Atque inventore autem ut facere.
+                </div>
+                <div style="float: left; max-width: 50%;">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam cum modi error ducimus voluptate quisquam, ad, sed asperiores
+                    minus natus atque reiciendis facilis? Consectetur numquam modi omnis sapiente voluptates sequi? Aliquid,
+                    unde in. Facere aliquam quis aliquid nihil voluptas. Quisquam ipsa omnis laborum cupiditate harum distinctio
+                    eum, velit sequi quia, modi aperiam error accusantium repellendus enim laboriosam iusto tempora optio.
+                    Nemo dignissimos nobis consequuntur recusandae reprehenderit ipsam nesciunt vel accusamus. Accusamus
+                    vitae quod quisquam nam eligendi soluta, non, consequatur consequuntur nesciunt fuga consectetur rerum
+                    totam blanditiis ullam ad. Eum, obcaecati. Eius quasi tempora quae numquam amet quia doloremque tenetur,
+                    deleniti corrupti distinctio mollitia! Perferendis esse atque facere error, at ea incidunt, neque deleniti,
+                    nihil similique ratione earum praesentium amet fugit? Quasi nulla voluptatem ipsa dolor amet, inventore
+                    optio saepe explicabo esse ipsum voluptates. Fugit ab voluptatibus voluptates omnis at ipsa blanditiis
+                    rem error quod ad sed, minus impedit eveniet dolor. Quisquam illo id obcaecati deserunt iusto. Ipsa animi
+                    officia, veniam dolorum non est neque quaerat voluptatum totam facere fuga incidunt laudantium blanditiis
+                    esse tempora. Iusto aspernatur maiores recusandae deleniti dolore? Nihil illo perferendis aliquid eaque
+                    cumque, facere repellat ipsam hic tenetur possimus dicta? Veritatis, quisquam culpa? Porro a illum, eligendi
+                    eaque minus, placeat facere minima ex molestias quas ad fugiat.
+                </div>
+            </div>
+        </section>
         <section style="background-color:blueviolet; height: 150px;"></section>
         <div>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, optio! Fuga, optio? Animi, in nisi exercitationem natus fugit
