add design for studies section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
     <main class="container">
-        <section style="background-color:aquamarine; height: 150px;">
+        <section style="background-color:aquamarine;">
             <div class="clearfix">
                 <div style="float: left; max-width: 50%;">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis pariatur possimus sapiente dicta laudantium aliquid et
@@ -53,7 +53,21 @@
                 </div>
             </div>
         </section>
-        <section style="background-color:blueviolet; height: 150px;"></section>
+        <section style="background-color:blueviolet;">
+            <ul style="display: flex; flex-flow: row nowrap; justify-content: space-around; list-style: none; margin: 0">
+                <li style="width: 100px;">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae veritatis ut rem qui distinctio dignissimos, pariatur nisi
+                    fugit harum voluptas modi deleniti velit dolor vel accusamus nostrum reiciendis facere? Vero.
+                </li>
+                <li style="width: 100px;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet voluptatibus facere, soluta eius molestias
+                    aperiam mollitia molestiae exercitationem, similique, nesciunt asperiores quos nihil doloremque iste
+                    incidunt ipsa. Earum, modi sit.</li>
+                <li style="width: 100px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum est ipsam earum animi, blanditiis repellendus
+                    iure. Delectus accusantium labore expedita magnam quae enim, recusandae, ducimus natus fugit quasi corrupti
+                    tempore.
+                </li>
+            </ul>
+        </section>
         <div>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, optio! Fuga, optio? Animi, in nisi exercitationem natus fugit
             veniam, porro quo sequi deleniti deserunt blanditiis iure laboriosam, rerum voluptatem a?
