add smooth scroll to top

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./dist/font-awesome/css/font-awesome.min.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
-<body>
+<body id="page-top">
+    <span class="ir-arriba">
+        <i class="fa fa-chevron-up"></i>
+    </span>
     <nav></nav>
     <header style="background-color:blue; height: 100vh;">
         <div style="background-color:antiquewhite; height: 100vh; width: 25%; opacity: 0.5; display: flex; align-items: center;">
@@ -55,14 +60,14 @@
         </section>
         <section style="background-color:blueviolet;">
             <ul style="display: flex; flex-flow: row nowrap; justify-content: space-around; list-style: none; margin: 0">
-                <li style="width: 100px;">
+                <li style="max-width: 25%;">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae veritatis ut rem qui distinctio dignissimos, pariatur nisi
                     fugit harum voluptas modi deleniti velit dolor vel accusamus nostrum reiciendis facere? Vero.
                 </li>
-                <li style="width: 100px;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet voluptatibus facere, soluta eius molestias
+                <li style="max-width: 25%;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet voluptatibus facere, soluta eius molestias
                     aperiam mollitia molestiae exercitationem, similique, nesciunt asperiores quos nihil doloremque iste
                     incidunt ipsa. Earum, modi sit.</li>
-                <li style="width: 100px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum est ipsam earum animi, blanditiis repellendus
+                <li style="max-width: 25%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum est ipsam earum animi, blanditiis repellendus
                     iure. Delectus accusantium labore expedita magnam quae enim, recusandae, ducimus natus fugit quasi corrupti
                     tempore.
                 </li>
@@ -77,10 +82,31 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor temporibus laboriosam a error. Facere dolores, totam, iste
             unde corporis labore enim ipsum dolore harum, numquam consequatur beatae ut et nihil.
         </div>
-        <section style="background-color:black; height: 150px;"></section>
+        <section style="background-color:gray; height: 150px;"></section>
+        <section style="background-color:darkseagreen;">
+            <form name="contact" method="get">
+                <input type="text" name="nombre" id="nombre" placeholder="Nombre" required>
+                <input type="text" name="apellidos" id="apellidos" placeholder="Apellidos" required>
+                <input type="email" id="email" name="email" placeholder="name@company.com">
+                <input type="text" name="telf" id="telf" placeholder="Teléfono" required>
+                <label for="Label1">Label1</label>
+                <input type="radio" id="Label1" name="Label1" value="1" required>
+                <label for="Label2">Label2</label>
+                <input type="radio" id="Label2" name="Label2" value="2" required>
+                <label for="Label3">Label3</label>
+                <input type="radio" id="Label3" name="Label3" value="3" required>
+                <label for="LabelOthers">Others</label>
+                <input type="radio" id="LabelOthers" name="LabelOthers" value="Others" required>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <div class="form-row">
+                    <button type="submit" id="enviar">Enviar</button>
+                </div>
+            </form>
+        </section>
     </main>
 
     <footer>Copyright &copy; Daniel Castillo</footer>
+    <script src="./js/smoothScroll.js"></script>
 </body>
 
 </html>
