--- a/index.html
+++ b/index.html
@@ -18,94 +18,109 @@
         <i class="fa fa-chevron-up"></i>
     </span>
     <nav></nav>
-    <header style="background-color:blue; height: 100vh;">
-        <div style="background-color:antiquewhite; height: 100vh; width: 25%; opacity: 0.5; display: flex; align-items: center;">
+    <header class="header">
+        <div style="background-color:antiquewhite;" class="header__left">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, ipsum perferendis quos quibusdam expedita blanditiis
                 saepe repellat perspiciatis, sunt, enim adipisci? Illo sunt assumenda accusantium voluptatum quas sit officia
                 eos.
             </p>
         </div>
-        <div style="width: 100%; margin-top: -11vh; font-size: 4em; display: flex; justify-content: center;">
+        <div class="header__down">
             <a href="#" style="color:antiquewhite">
-                <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
+                <i class="fa fa-chevron-down" aria-hidden="true"></i>
             </a>
-
         </div>
     </header>
-    <main class="container">
-        <section style="background-color:aquamarine;">
-            <div class="clearfix">
-                <div style="float: left; max-width: 50%;">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis pariatur possimus sapiente dicta laudantium aliquid et
-                    odio ad, voluptatum porro magni veritatis in perferendis nulla. Atque inventore autem ut facere.
-                </div>
-                <div style="float: left; max-width: 50%;">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam cum modi error ducimus voluptate quisquam, ad, sed asperiores
-                    minus natus atque reiciendis facilis? Consectetur numquam modi omnis sapiente voluptates sequi? Aliquid,
-                    unde in. Facere aliquam quis aliquid nihil voluptas. Quisquam ipsa omnis laborum cupiditate harum distinctio
-                    eum, velit sequi quia, modi aperiam error accusantium repellendus enim laboriosam iusto tempora optio.
-                    Nemo dignissimos nobis consequuntur recusandae reprehenderit ipsam nesciunt vel accusamus. Accusamus
-                    vitae quod quisquam nam eligendi soluta, non, consequatur consequuntur nesciunt fuga consectetur rerum
-                    totam blanditiis ullam ad. Eum, obcaecati. Eius quasi tempora quae numquam amet quia doloremque tenetur,
-                    deleniti corrupti distinctio mollitia! Perferendis esse atque facere error, at ea incidunt, neque deleniti,
-                    nihil similique ratione earum praesentium amet fugit? Quasi nulla voluptatem ipsa dolor amet, inventore
-                    optio saepe explicabo esse ipsum voluptates. Fugit ab voluptatibus voluptates omnis at ipsa blanditiis
-                    rem error quod ad sed, minus impedit eveniet dolor. Quisquam illo id obcaecati deserunt iusto. Ipsa animi
-                    officia, veniam dolorum non est neque quaerat voluptatum totam facere fuga incidunt laudantium blanditiis
-                    esse tempora. Iusto aspernatur maiores recusandae deleniti dolore? Nihil illo perferendis aliquid eaque
-                    cumque, facere repellat ipsam hic tenetur possimus dicta? Veritatis, quisquam culpa? Porro a illum, eligendi
-                    eaque minus, placeat facere minima ex molestias quas ad fugiat.
-                </div>
+    <section style="background-color:aquamarine;" class="section-container">
+        <div class="about-me container clearfix">
+            <div class="about-me__image">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis pariatur possimus sapiente dicta laudantium aliquid et
+                odio ad, voluptatum porro magni veritatis in perferendis nulla. Atque inventore autem ut facere.
             </div>
-        </section>
-        <section style="background-color:blueviolet;">
+            <div class="about-me__info">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam cum modi error ducimus voluptate quisquam, ad, sed asperiores
+                minus natus atque reiciendis facilis? Consectetur numquam modi omnis sapiente voluptates sequi? Aliquid,
+                unde in. Facere aliquam quis aliquid nihil voluptas. Quisquam ipsa omnis laborum cupiditate harum distinctio
+                eum, velit sequi quia, modi aperiam error accusantium repellendus enim laboriosam iusto tempora optio. Nemo
+                dignissimos nobis consequuntur recusandae reprehenderit ipsam nesciunt vel accusamus. Accusamus vitae quod
+                quisquam nam eligendi soluta, non, consequatur consequuntur nesciunt fuga consectetur rerum totam blanditiis
+                ullam ad. Eum, obcaecati. Eius quasi tempora quae numquam amet quia doloremque tenetur, deleniti corrupti
+                distinctio mollitia! Perferendis esse atque facere error, at ea incidunt, neque deleniti, nihil similique
+                ratione earum praesentium amet fugit? Quasi nulla voluptatem ipsa dolor amet, inventore optio saepe explicabo
+                esse ipsum voluptates. Fugit ab voluptatibus voluptates omnis at ipsa blanditiis rem error quod ad sed, minus
+                impedit eveniet dolor. Quisquam illo id obcaecati deserunt iusto. Ipsa animi officia, veniam dolorum non
+                est neque quaerat voluptatum totam facere fuga incidunt laudantium blanditiis esse tempora. Iusto aspernatur
+                maiores recusandae deleniti dolore? Nihil illo perferendis aliquid eaque cumque, facere repellat ipsam hic
+                tenetur possimus dicta? Veritatis, quisquam culpa? Porro a illum, eligendi eaque minus, placeat facere minima
+                ex molestias quas ad fugiat.
+            </div>
+        </div>
+    </section>
+    <section style="background-color:blueviolet;" class="section-container">
+        <div class="knowlege container clearfix">
             <ul style="display: flex; flex-flow: row nowrap; justify-content: space-around; list-style: none; margin: 0">
                 <li style="max-width: 25%;">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae veritatis ut rem qui distinctio dignissimos, pariatur nisi
-                    fugit harum voluptas modi deleniti velit dolor vel accusamus nostrum reiciendis facere? Vero.
-                </li>
-                <li style="max-width: 25%;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet voluptatibus facere, soluta eius molestias
-                    aperiam mollitia molestiae exercitationem, similique, nesciunt asperiores quos nihil doloremque iste
-                    incidunt ipsa. Earum, modi sit.</li>
-                <li style="max-width: 25%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum est ipsam earum animi, blanditiis repellendus
-                    iure. Delectus accusantium labore expedita magnam quae enim, recusandae, ducimus natus fugit quasi corrupti
-                    tempore.
-                </li>
+                    <div class="" Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae veritatis ut rem qui distinctio dignissimos,
+                        pariatur nisi fugit harum voluptas modi deleniti velit dolor vel accusamus nostrum reiciendis facere?
+                        Vero. </li>
+                        <li style="max-width: 25%;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet voluptatibus facere, soluta eius
+                            molestias aperiam mollitia molestiae exercitationem, similique, nesciunt asperiores quos nihil
+                            doloremque iste incidunt ipsa. Earum, modi sit.</li>
+                        <li style="max-width: 25%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum est ipsam earum animi, blanditiis
+                            repellendus iure. Delectus accusantium labore expedita magnam quae enim, recusandae, ducimus
+                            natus fugit quasi corrupti tempore.
+                        </li>
             </ul>
-        </section>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, optio! Fuga, optio? Animi, in nisi exercitationem natus fugit
-            veniam, porro quo sequi deleniti deserunt blanditiis iure laboriosam, rerum voluptatem a?
-        </div>
-        <section style="background-color:red; height: 150px;"></section>
-        <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor temporibus laboriosam a error. Facere dolores, totam, iste
-            unde corporis labore enim ipsum dolore harum, numquam consequatur beatae ut et nihil.
-        </div>
-        <section style="background-color:gray; height: 150px;"></section>
-        <section style="background-color:darkseagreen;">
+            </div>
+    </section>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, optio! Fuga, optio? Animi, in nisi exercitationem natus fugit
+        veniam, porro quo sequi deleniti deserunt blanditiis iure laboriosam, rerum voluptatem a?
+    </div>
+    <section style="background-color:red; height: 150px;" class="section-container"></section>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor temporibus laboriosam a error. Facere dolores, totam, iste
+        unde corporis labore enim ipsum dolore harum, numquam consequatur beatae ut et nihil.
+    </div>
+    <section style="background-color:gray; height: 150px;" class="section-container"></section>
+    <section style="background-color:darkseagreen;" class="section-container">
+        <div class="container">
             <form name="contact" method="get">
-                <input type="text" name="nombre" id="nombre" placeholder="Nombre" required>
-                <input type="text" name="apellidos" id="apellidos" placeholder="Apellidos" required>
-                <input type="email" id="email" name="email" placeholder="name@company.com">
-                <input type="text" name="telf" id="telf" placeholder="Teléfono" required>
-                <label for="Label1">Label1</label>
-                <input type="radio" id="Label1" name="Label1" value="1" required>
-                <label for="Label2">Label2</label>
-                <input type="radio" id="Label2" name="Label2" value="2" required>
-                <label for="Label3">Label3</label>
-                <input type="radio" id="Label3" name="Label3" value="3" required>
-                <label for="LabelOthers">Others</label>
-                <input type="radio" id="LabelOthers" name="LabelOthers" value="Others" required>
-                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <div class="form-row">
+                    <input type="text" name="nombre" id="nombre" placeholder="Nombre" required>
+                    <input type="text" name="apellidos" id="apellidos" placeholder="Apellidos" required>
+                </div>
+                <div class="form-row">
+                    <input type="email" id="email" name="email" placeholder="name@company.com">
+                </div>
+                <div class="form-row">
+                    <input type="text" name="telf" id="telf" placeholder="Teléfono" required>
+                </div>
+                <div class="form-row">
+                    <label for="Label1">Label1</label>
+                    <input type="radio" id="Label1" name="Label1" value="1" required>
+                    <label for="Label2">Label2</label>
+                    <input type="radio" id="Label2" name="Label2" value="2" required>
+                    <label for="Label3">Label3</label>
+                    <input type="radio" id="Label3" name="Label3" value="3" required>
+                    <label for="LabelOthers">Others</label>
+                    <input type="radio" id="LabelOthers" name="LabelOthers" value="Others" required>
+                    <input type="text" name="nombre" id="nombre" placeholder="Nombre" required>
+                </div>
+                <div class="form-row">
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                </div>
                 <div class="form-row">
                     <button type="submit" id="enviar">Enviar</button>
                 </div>
             </form>
-        </section>
-    </main>
+        </div>
+    </section>
 
-    <footer>Copyright &copy; Daniel Castillo</footer>
+    <footer class="footer">
+        Copyright &copy; Daniel Castillo
+    </footer>
+
     <script src="./js/smoothScroll.js"></script>
 </body>
 
