--- a/index.html
+++ b/index.html
@@ -56,22 +56,53 @@
             </div>
         </div>
     </section>
-    <section style="background-color:blueviolet;" class="section-container">
-        <div class="knowlege container clearfix">
-            <ul style="display: flex; flex-flow: row nowrap; justify-content: space-around; list-style: none; margin: 0">
-                <li style="max-width: 25%;">
-                    <div class="" Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae veritatis ut rem qui distinctio dignissimos,
-                        pariatur nisi fugit harum voluptas modi deleniti velit dolor vel accusamus nostrum reiciendis facere?
-                        Vero. </li>
-                        <li style="max-width: 25%;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet voluptatibus facere, soluta eius
-                            molestias aperiam mollitia molestiae exercitationem, similique, nesciunt asperiores quos nihil
-                            doloremque iste incidunt ipsa. Earum, modi sit.</li>
-                        <li style="max-width: 25%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum est ipsam earum animi, blanditiis
-                            repellendus iure. Delectus accusantium labore expedita magnam quae enim, recusandae, ducimus
-                            natus fugit quasi corrupti tempore.
-                        </li>
+    <section class="section-container">
+        <div class="container clearfix">
+            <ul class="knowledge">
+                <li class="knowledge-item">
+                    <div class="knowledge__studies">
+                        <div class="flip">
+                            <div class="knowledge__studies-item flip__knowledge__studies-item--front">
+                                <i class="fa fa-code-fork" aria-hidden="true"></i>
+                            </div>
+                            <div class="knowledge__studies-item flip__knowledge__studies-item--back">
+                                Studies
+                            </div>
+                        </div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae veritatis ut rem qui distinctio dignissimos, pariatur nisi
+                        fugit harum voluptas modi deleniti velit dolor vel accusamus nostrum reiciendis facere? Vero.
+                    </div>
+                </li>
+                <li class="knowledge-item">
+                    <div class="knowledge__courses">
+                        <div class="flip">
+                            <div class="knowledge__courses-item flip__knowledge__courses-item--front">
+                                <i class="fa fa-code" aria-hidden="true"></i>
+                            </div>
+                            <div class="knowledge__courses-item flip__knowledge__courses-item--back">
+                                Courses
+                            </div>
+                        </div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae veritatis ut rem qui distinctio dignissimos, pariatur nisi
+                        fugit harum voluptas modi deleniti velit dolor vel accusamus nostrum reiciendis facere? Vero.
+                    </div>
+                </li>
+                <li class="knowledge-item">
+                    <div class="knowledge__proyects">
+                        <div class="flip">
+                            <div class="knowledge__proyects-item flip__knowledge__proyects-item--front">
+                                <i class="fa fa-terminal" aria-hidden="true"></i>
+                            </div>
+                            <div class="knowledge__proyects-item flip__knowledge__proyects-item--back">
+                                Proyects
+                            </div>
+                        </div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae veritatis ut rem qui distinctio dignissimos, pariatur nisi
+                        fugit harum voluptas modi deleniti velit dolor vel accusamus nostrum reiciendis facere? Vero.
+                    </div>
+                </li>
             </ul>
-            </div>
+        </div>
     </section>
     <div>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, optio! Fuga, optio? Animi, in nisi exercitationem natus fugit
