add images to knowledge

--- a/index.html
+++ b/index.html
@@ -88,7 +88,12 @@
             </ul>
         </div>
     </section>
-
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ad recusandae animi nesciunt quis eligendi. Quibusdam
+        officiis rem illum repellendus molestias, temporibus voluptates fuga repellat architecto tempora, voluptatum quaerat
+        animi.Veritatis ratione aspernatur accusamus aperiam aliquid perferendis, doloribus ipsum voluptates molestiae hic
+        harum amet laudantium iusto quae quis doloremque quia incidunt molestias nesciunt facilis fugit magni dignissimos
+        error. Consequatur, facilis!
+    </div>
     <section class="section-container dark-theme__section">
         <div class="works__timeline">
             <div class="works__timeline-item">
