add section breaker

--- a/index.html
+++ b/index.html
@@ -88,11 +88,18 @@
             </ul>
         </div>
     </section>
-    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ad recusandae animi nesciunt quis eligendi. Quibusdam
-        officiis rem illum repellendus molestias, temporibus voluptates fuga repellat architecto tempora, voluptatum quaerat
-        animi.Veritatis ratione aspernatur accusamus aperiam aliquid perferendis, doloribus ipsum voluptates molestiae hic
-        harum amet laudantium iusto quae quis doloremque quia incidunt molestias nesciunt facilis fugit magni dignissimos
-        error. Consequatur, facilis!
+    <div class="section__breaker">
+        <div class="section__breaker-container">
+            <div class="section__breaker-item">
+                <blockquote>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eget leo nunc, nec tempus mi? Curabitur id nisl mi, ut vulputate
+                    urna. Quisque porta facilisis tortor, vitae bibendum velit fringilla vitae! Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Mauris eget leo nunc, nec tempus mi? Curabitur id nisl mi, ut vulputate
+                    urna. Quisque porta facilisis tortor, vitae bibendum velit fringilla vitae!
+                    <cite>Somebody famous</cite>
+                </blockquote>
+            </div>
+        </div>
     </div>
     <section class="section-container dark-theme__section">
         <div class="works__timeline">
